# paper_translator

./: .gitignore  README.md
.devcontainer/: devcontainer.json
app/: Refactaring.md  main.py  pyproject.toml  tmp_markdown.md
app/config/: grobid_config.json
app/lib/: SentenceWindowNodeParser.ipynb  document_summary_test.ipynb  langchain_test.ipynb  llm.ipynb  metadata_extractor_text.ipynb  prmpt_text.ipynb  prompt_test2.ipynb  test.ipynb  translator_Test.ipynb
app/src/: Informations.py  OpenAIUtils.py  SaveToNotion.py  SlackUtils.py  Utils.py  XMLUtils.py  __init__.py  arXivUtils.py
app/src/model/: __init__.py  huggingface.py  llama_cpp.py
app/src/translator/: __init__.py  huggingface.py  langchain_summarizer.py  llama_cpp.py  llamaindex_summarizer.py  pipeline.py  summarize_translator.py
docker/: README.md  docker-compose.yml
docker/app/: Dockerfile
