[tool.poetry]
name = "paper-translator"
version = "0.1.0"
description = "chatGPTを用いてarXivの論文を自動的に翻訳ためのアプリケーション"
authors = ["rurusasu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv = "^1.4.8"
openai = "^0.27.9"
slack-bolt = "^1.18.0"
transformers = "^4.32.0"
tqdm = "^4.66.1"
torch = "2.0.0"
sentencepiece = "^0.1.99"
notion-client = "^2.0.0"
grobid-client-python = "^0.0.7"
sacremoses = "^0.0.53"
auto-gptq = "^0.4.2"
llama-index = "^0.8.36"
sentence-transformers = "^2.2.2"
pypdf = "^3.16.0"
safetensors = "^0.3.3"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
anytree = "^2.9.0"
span-marker = "^1.4.0"
setuptools = "^68.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
